2003-05-31  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* zlib-thin.ads, zlib-thin.adb:
	Update ZLib-Ada version from latest sources.

	* zlib.ads, zlib.adb:
	(Is_Open): New routine.

2004-05-28  Pascal Obry  <pascal@obry.org>

	* makefile:
	(SOURCES): Add ai302-containers-indefinite_vectors.ad[sb].

	* ai302-containers-indefinite_vectors.ads,
	  ai302-containers-indefinite_vectors.adb:
	Initial revision.

2004-05-27  Pascal Obry  <pascal@obry.org>

	* makefile:
	(SOURCES): Add ai302-containers-generic_array_sort.adb,
	 ai302-containers-generic_constrained_array_sort.adb and
	 ai302-containers-vectors.adb

	* ai302-containers-generic_array_sort.ads,
	  ai302-containers-generic_array_sort.adb:
	Initial revision.
	
	* ai302-containers-generic_constrained_array_sort.ads,
	  ai302-containers-generic_constrained_array_sort.adb:
	Initial revision.

	* ai302-containers-vectors.ads, ai302-containers-vectors.adb:
	Initial revision.

2004-05-20  Pascal Obry  <pascal@obry.org>

	* ai302-strings-hash.adb:
	Use a better implementation.

2004-05-17  Pascal Obry  <pascal@obry.org>

	* include.gpr:
	(Compiler): Remove -m option, this is a builder option not a
	 compiler one.

2004-05-17  Pascal Obry  <pascal@obry.org>

	* makefile:
	(SOURCES): Remove Table_Of...G add AI302 and Charles components.

	* ai302-containers-indefinite_ordered_sets.adb:
	(Process): Remove inefective pragma Inline.

	* table_of_strings_and_static_values_g.ads,
	  table_of_strings_and_static_values_g.adb:
	Removed.

	* table_of_static_keys_and_static_values_g.ads,
	  table_of_static_keys_and_static_values_g.adb:
	Removed.

	* table_of_static_keys_and_dynamic_values_g.ads,
	  table_of_static_keys_and_dynamic_values_g.adb:
	Removed.

	* table_of_dynamic_keys_and_static_values_g.ads,
	  table_of_dynamic_keys_and_static_values_g.adb:
	Removed.

2004-05-17  Pascal Obry  <pascal@obry.org>

	* charles-algorithms-generic_includes.ads,
          charles-algorithms-generic_includes.adb:
	Initial revision.
